--- a/tilecascade.css
+++ b/tilecascade.css
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Electrolize");
+
 body {
   width: 750px;
   height: 750px;
   padding: 40px 0 0 40px;
+}
+
+p {
+  color: white;
+  font-family: "Electrolize", sans-serif;
 }
 
 .row {
@@ -10,6 +17,10 @@ body {
 
 .ready {
   background-color: #a7a7a7;
+}
+
+.reset {
+  background-color: #a7a7a7 !important;
 }
 
 .tile {
