--- a/tilecascade.css
+++ b/tilecascade.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Electrolize");
 
 body {
+  margin-left: auto;
+  margin-right: auto;
   width: 750px;
   height: 750px;
   padding: 40px 0 0 40px;
+  background-color: #333333;
 }
 
 p {
